# taxon_aware_amr

./: .gitignore  CHANGELOG.md  LICENSE  QUICKSTART.md  README.md  pyproject.toml
envs/: environment.yml
examples/: kenya_biodiversity_input.tsv  metadata_species_list.tsv
src/taxon_aware_amr/: __init__.py  __main__.py  amr.py  assembly.py  cache.py  cli.py  final_output.py  fixtures.py  gene_count.py  input.py  ncbi.py  orchestrator.py  reporting.py  taxonomy.py  virulence.py
tests/: run_all.py  test_pipeline_full.py  test_step2_pipeline.py  test_step3_pipeline.py  test_step4_pipeline.py  test_taxonomy.py
